# code-challenges

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: python-checks.yaml  python-lint.yaml
python/: experiment.py  pyproject.toml
python/sols/arrays/: prefix_sum_problems.py  spiral.py  two_pointers.py
python/sols/binary_tree/: binary_tree.py  good_nodes.py  zigzag_traversal.py
python/sols/linked_lists/: linked_list.py  two_pointers.py
python/sols/search_problems/: depth_first_search.py
python/sols/strings/: edit_distance.py  look_and_say.py
python/tests/arrays/: test_prefix_sum_problems.py  test_spiral.py  test_two_pointers.py
python/tests/binary_tree/: test_good_nodes.py  test_zigzag_traversal.py
python/tests/linked_lists/: test_linked_list.py  test_two_pointers_ll.py
python/tests/search_problems/: test_depth_first_search.py
python/tests/strings/: test_edit_distance.py  test_look_and_say.py
sols-expl/arrays/: README.md
sols-expl/binary_tree/: README.md
sols-expl/linked_lists/: README.md
sols-expl/search-problems/: README.md
sols/python/: pyproject.toml
sols/python/code_challenges/: coding-chall.py
sols/python/code_challenges/arrays/: generic.py  prefix_sum_problems.py  two_pointers.py
sols/python/code_challenges/binary_tree/: good_nodes.py  zigzag_traversal.py
sols/python/code_challenges/dynamic_programming/: dp.py
sols/python/code_challenges/linked_lists/: two_pointers.py
sols/python/code_challenges/search_problems/: depth_first_search.py
sols/python/tests/arrays/: test_prefix_sum_problems.py  test_spiral.py  test_two_pointers.py
sols/python/tests/binary_tree/: test_good_nodes.py  test_zigzag_traversal.py
sols/python/tests/linked_lists/: test_linked_list.py  test_two_pointers_ll.py
sols/python/tests/search_problems/: test_depth_first_search.py
sols/python/tests/strings/: test_edit_distance.py  test_look_and_say.py
(+1 files in other folders)
